# module-7-kingahmadr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.stage  README.md  app.py  pyproject.toml
dockerized/: docker-compose.yaml  init.sql
migrations/versions/: 5478b459fc0a_re_init_table.py  77c6b45eb0e8_init_migrate.py
src/config/: prod.py  settings.py  testing.py
src/models/: Review.py  UserRoleModel.py
src/router/: Login.py  Logout.py  Register.py  Review.py  TestQuery.py  UserFetch.py
src/seed/: seed_database.py
src/services/: AuthService.py
src/static/: style.css
src/templates/: index.html  login.html  register.html
